colorgame.css
@import url(https://fonts.googleapis.com/css?family=Montserrat);
body {
    background-color: #232323 !important;
    color: white !important;
    margin: 0;
    font-family: "Montserrat", "Avenir";
    text-transform: uppercase;
}
h1 {
    text-align: center;
    background: steelblue;
    margin: 0;
    font-weight: normal;
    line-height: 1.1;
    padding: 20px 0;
    font-size: 36px;
}
#colorToGuess {
    font-size: 200%;
}
#stripe {
    background: white;
    color: black;
    height: 40px;
    text-align: center;
    font-size: 16px;
}
.btn-group {
    height: 100%;
}
.btn,
button,
button:focus {
    border: none;
    border-radius: 0;
    background: none;
    padding: 0 6px;
    text-transform: uppercase;
    height: 100%;
    font-weight: 700;
    color: steelblue !important;
    letter-spacing: 0.7px;
    font-size: inherit;
    transition: all 0.3s;
    outline: none !important;
}
.dropdown-menu > li > a:hover,
.selected,
button:hover {
    color: white !important;
    background: steelblue;
}
.btn {
    min-width: 155px;
}
.arrow-down {
    display: inline-block;
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid steelblue;
    border-bottom: 4px solid transparent;
}
.dropdown-menu > li > a {
    color: steelblue;
}
#message {
    display: inline-block;
    width: 10%;
}
#container {
    margin: 40px auto;
    max-width: 600px;
}
.colorGuess {
    width: 180px;
    margin: 10px;
    padding-bottom: 180px;
    float: left;
    background: #232323;
    transition: background 0.6s;
    -webkit-transition: background 0.6s;
    -moz-transition: background 0.6s;
    border-radius: 50%;
}
.dropbtn {
    font-size: 16px;
    border: none;
    cursor: pointer;
}
.dropdown {
    height: 100%;
    position: relative;
    display: inline-block;
}
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}
.dropdown-content a {
    color: steelblue;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}
.dropdown-content a:hover {
    background-color: steelblue;
    color: white;
}
.dropdown:hover .dropdown-content {
    display: block;
}
#header {
    text-transform: none;
    color: steelblue;
    background: white;
}
#header .text-center {
    padding: 10px 10px;
    text-align: center;
}

